<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5sp"
        android:paddingLeft="5sp"
        android:paddingTop="5sp"
        android:paddingRight="5sp"
        android:paddingBottom="5sp"
        android:showDividers="middle">

        <Button
            android:id="@+id/btnDay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/bu_i_1"
            app:backgroundTint="#FFBE6A" />


        <Button
            android:id="@+id/btnDay2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/bu_i_2"
            android:textColor="#8F8F8F"
            app:backgroundTint="#FFD73B" />

        <Button
            android:id="@+id/btnDay3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/bu_i_3"
            android:textColor="#000000"
            app:backgroundTint="#FFFF00" />

        <Button
            android:id="@+id/btnDay4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day_4"
            android:textColor="#000000"
            app:backgroundTint="@color/golden1" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>