<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".week1.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="5dp">

        <Button
            android:id="@+id/btnDay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1sp"
            android:layout_weight="1"
            android:text="@string/bu_i_1"
            android:textColor="@color/text_black"
            app:backgroundTint="@color/golden1" />

        <Button
            android:id="@+id/btnDay2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1sp"
            android:layout_weight="1"
            android:text="@string/bu_i_2"
            android:textColor="#8F8F8F"
            app:backgroundTint="@color/golden2" />

        <Button
            android:id="@+id/btnDay3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1sp"
            android:layout_weight="1"
            android:text="@string/bu_i_3"
            android:textColor="#000000"
            app:backgroundTint="@color/golden3" />

        <Button
            android:id="@+id/btnDay4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1sp"
            android:layout_weight="1"
            android:text="@string/day_4"
            android:textColor="#000000"
            app:backgroundTint="@color/golden4" />

        <Button
            android:id="@+id/btnDay5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Day 5"
            android:textColor="@color/text_black"
            app:backgroundTint="@color/green1" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>